# bhook

./: build.gradle
bytehook/: build.gradle
bytehook/src/main/cpp/: CMakeLists.txt  bh_array.h  bh_config.h  bh_const.h  bh_hub.c  bh_linker.c  bh_safe.c  bh_safe.h  bh_util.h  bytesig.c  bytesig.h
bytehook_sample/: build.gradle
bytehook_sample/src/main/cpp/: CMakeLists.txt  hacker.c  sample.c
bytehook_systest/: build.gradle
bytehook_systest/src/main/cpp/: CMakeLists.txt
